# code-analytics-examples

./: README.md
cnova/: CMakeLists.txt  CodeAnalysis.cpp  code_analysis_summary.cpp  cppcast_quickfixes.cpp  qodana.yaml
cpp/: .gitignore  qodana.yaml
dotnet/: .gitignore  .keep  Class1.cs  RunInspectionTest.csproj  RunInspectionTest.sln  qodana.yaml
dotnet/OtherProject/: Class1.cs  OtherProject.csproj
dotnet/OtherProject/Properties/: AssemblyInfo.cs
dotnet/Properties/: AssemblyInfo.cs
duplicates/: duplicate_functions_1.php  duplicate_functions_2.php
go/: main.go
java/: build.gradle
java/com.jetbrains.sa/: BadExceptionNameClass.java
java/src/main/java/: AppStarter.java
js/: main.js
py_error/: func.py  qodana.yaml
ruby/: hello.rb
rust/: Cargo.toml
rust/qodana_rust/: Cargo.toml
rust/qodana_rust/src/: main.rs
rust/src/: main.rs
